# replayos-standalone-review

./: .env.example  .gitignore  README.md  pyproject.toml  standalone_replay_review.py
docs/: DESIGN_REPORT.md  MODEL_EVALUATION.md  SCHEMA.md  standalone-replay-review.md
frontend/: index.html  package-lock.json  package.json
frontend/public/native-viewer/: index.html
frontend/public/native-viewer/assets/: Ball-B_LtIIVB.js  Field-BjWhsxby.js  Octane_ZXR_Blue-CaWEcL3o.js  (+7 more)
frontend/src/: main.jsx  styles.css  viewerAssets.js
native-viewer/: index.html  package-lock.json  package.json  vite.config.js
native-viewer/src/: customAnimationBuilder.js  customGameBuilder.js  loadoutAssets.js  main.jsx  replayCameraController.js  sceneEnhancements.js  smoothReplayClock.js  styles.css
replayos/: __init__.py  analyst.py  analytics.py  api.py  ballchasing.py  car_meta.py  carball_ingest.py  config.py  db.py  frames.py  identity.py  live_sync.py  maintenance.py  models.py  native_viewer.py  recordbook.py  semantics.py  site.py  warehouse.py  youtube_sync.py
scripts/: backfill_carball.py  build_warehouse.py  full_library_run.py  maintenance_sidecar.py  run_maintenance.py  run_pipeline.py  smoke_api.py  sync_ballchasing.py  sync_live.py  sync_youtube.py  train_models.py
tests/: test_analytics.py  test_ballchasing.py  test_car_meta.py  test_carball_ingest.py  test_db.py  test_frames.py  test_live_sync.py  test_maintenance.py  test_native_viewer.py  test_recordbook.py  test_semantics.py  test_site.py  test_site_cache.py  test_standalone_replay_review.py  test_youtube_sync.py
(+17 files in other folders)
