[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replayos"
version = "0.1.0"
description = "Full-stack Rocket League replay intelligence platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "fastapi>=0.110",
  "numpy>=1.26",
  "pandas>=2.0",
  "pydantic>=2.0",
  "sprocket-boxcars-py @ git+https://github.com/SprocketBot/boxcars-py.git@ae6b6b5c23144f43706ba3c61fbd484deb57588b",
  "sprocket_carball>=1.2.1",
  "yt-dlp>=2026.3.17",
  "uvicorn[standard]>=0.27"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
include = ["replayos*"]
